navber and banner slider added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,248 @@
   </head>
   <body>
 
+    <!--================== Header Section Code Start ===============-->
+    <header>
+
+        <!-- navber start -->
+        <nav class="navbar navbar-expand-lg bg-light py-3">
+            <div class="container">
+              <a class="navbar-brand order-1 order-sm-0 order-md-0 order-lg-0" href="#">Navbar</a>
+              <button class="navbar-toggler order-3 order-sm-3 order-md-3 order-lg-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav m-auto mb-2 mb-lg-0"> 
+                  <li class="nav-item px-1">
+                    <a class="nav-link active text-secondary fs-6" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item px-1">
+                    <a class="nav-link text-secondary fs-6" aria-current="page" href="#">About</a>
+                  </li>
+                  <li class="nav-item px-1">
+                    <a class="nav-link text-secondary fs-6" aria-current="page" href="#">Courses</a>
+                  </li>
+                  <li class="nav-item px-1">
+                    <a class="nav-link text-secondary fs-6" aria-current="page" href="#">Instructors</a>
+                  </li>
+                  <li class="nav-item px-1">
+                    <a class="nav-link text-secondary fs-6" aria-current="page" href="#">Blog</a>
+                  </li>
+                  <li class="nav-item px-1">
+                    <a class="nav-link text-secondary fs-6" aria-current="page" href="#">Contact</a>
+                  </li>
+                </ul>
+              </div>
+
+              <button class="btn btn-outline-info order-2 order-sm-2 order-md-2 order-lg-2 border-info py-2 px-5 fw-semibold" type="submit">Register</button>
+
+            </div>
+          </nav>
+        <!-- navber End -->
+
+        <!-- Banner Slider Start -->
+
+        <section class="banner">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <!--  -->
+                        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                            
+                            <div class="carousel-inner rounded-1">
+                             <!--  -->
+                             <div class="carousel-item active bg-warning rounded-4 p-5 p-5 d-flex align-items-center justify-content-center" style="height:90vh; background: url(./image/b1.jpg) no-repeat center center / cover;">
+                                <div class="row">
+                                  <div
+                                    class="col-12 d-flex align-items-center justify-content-center">
+                                    <div class="banner-lefttext-inner text-center">
+                                      <h1 class="fw-bold text-white fs-1">Best Online Education<br> Expertise</h1>
+                                      <p class="fs-7 text-white fw-light mt-3">
+                                        education, discipline that is concerned with methods of teaching
+                                      </p>
+                                      <button class="btn btn-info rounded-1 px-4 py-2">Get Started</button>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                              <!--  -->
+                              <!--  -->
+                              <div class="carousel-item active bg-warning rounded-4 p-5 p-5 d-flex align-items-center justify-content-center" style="height:90vh; background: url(./image/b2.jpg) no-repeat center center / cover;">
+                                <div class="row">
+                                  <div
+                                    class="col-12 d-flex align-items-center justify-content-center">
+                                    <div class="banner-lefttext-inner text-center">
+                                      <h1 class="fw-bold text-white fs-1">Best Online Education<br> Expertise</h1>
+                                      <p class="fs-7 text-white fw-light mt-3">
+                                        education, discipline that is concerned with methods of teaching
+                                      </p>
+                                      <button class="btn btn-info rounded-1 px-4 py-2">Get Started</button>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                              <!--  -->
+                              <!--  -->
+                              <div class="carousel-item active bg-warning rounded-4 p-5 p-5 d-flex align-items-center justify-content-center" style="height:90vh; background: url(./image/b3.jpg) no-repeat center center / cover;">
+                                <div class="row">
+                                  <div
+                                    class="col-12 d-flex align-items-center justify-content-center">
+                                    <div class="banner-lefttext-inner text-center">
+                                      <h1 class="fw-bold text-white fs-1">Best Online Education<br> Expertise</h1>
+                                      <p class="fs-7 text-white fw-light mt-3">
+                                        education, discipline that is concerned with methods of teaching
+                                      </p>
+                                      <button class="btn btn-info rounded-1 px-4 py-2">Get Started</button>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                              <!--  -->
+                              <!--  -->
+                            </div>
+
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Next</span>
+                            </button>
+                          </div>
+                        <!--  -->
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Banner Slider End -->
+
+    </header>
+    <!--================== Header Section Code End ===============-->
+
+    <!--================== Main Section Code Start ===============-->
+
+    <main>
+        <!-- Courses Code Start -->
+        <section class="courses" style="height: 100vh; padding: 80px 0px;">
+            <div class="container">
+                <div class="row">
+                   <div class="course-titlebox d-flex flex-column justify-content-center align-items-center">
+                        <h1 class="fs-1 fw-bold text-center">Explore Our Popular<br> Online Courses</h1>
+                        <p class="text-center fs-6 text-secondary">Online education courses are a good way to learn new skills.</p>
+                   </div> 
+                    <div class="col-lg-6 col-12 col-sm-12 ol-md-12">
+                        <!--  -->
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                              <div class="col-md-4">
+                                <img src="..." class="img-fluid rounded-start" alt="...">
+                              </div>
+                              <div class="col-md-8">
+                                <div class="card-body">
+                                  <h5 class="card-title">Card title</h5>
+                                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        <!--  -->
+                        <!--  -->
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                              <div class="col-md-4">
+                                <img src="..." class="img-fluid rounded-start" alt="...">
+                              </div>
+                              <div class="col-md-8">
+                                <div class="card-body">
+                                  <h5 class="card-title">Card title</h5>
+                                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        <!--  -->
+                        <!--  -->
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                              <div class="col-md-4">
+                                <img src="..." class="img-fluid rounded-start" alt="...">
+                              </div>
+                              <div class="col-md-8">
+                                <div class="card-body">
+                                  <h5 class="card-title">Card title</h5>
+                                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        <!--  -->
+                        <!--  -->
+                    </div>  
+                    <div class="col-lg-6 col-12 col-sm-12 ol-md-12">
+                        <!--  -->
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                              <div class="col-md-4">
+                                <img src="..." class="img-fluid rounded-start" alt="...">
+                              </div>
+                              <div class="col-md-8">
+                                <div class="card-body">
+                                  <h5 class="card-title">Card title</h5>
+                                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        <!--  -->
+                        <!--  -->
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                              <div class="col-md-4">
+                                <img src="..." class="img-fluid rounded-start" alt="...">
+                              </div>
+                              <div class="col-md-8">
+                                <div class="card-body">
+                                  <h5 class="card-title">Card title</h5>
+                                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        <!--  -->
+                        <!--  -->
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                              <div class="col-md-4">
+                                <img src="..." class="img-fluid rounded-start" alt="...">
+                              </div>
+                              <div class="col-md-8">
+                                <div class="card-body">
+                                  <h5 class="card-title">Card title</h5>
+                                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        <!--  -->
+                        <!--  -->
+                    </div>  
+                </div>
+            </div>
+
+        </section>
+        <!-- Courses Code End -->
+    </main>
+    <!--================== Main Section Code End ===============-->
+
 
 
     <!-- Js File -->
