--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- navber start -->
         <nav class="navbar navbar-expand-lg bg-light py-3">
             <div class="container">
-              <a class="navbar-brand order-1 order-sm-0 order-md-0 order-lg-0" href="#">Navbar</a>
+              <a class="navbar-brand order-1 order-sm-0 order-md-0 order-lg-0" href="#"><img src="image/logo.webp" alt=""></a>
 
                   <button class="navbar-toggler order-3 order-sm-3 order-md-3 order-lg-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
