navber correction added

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <header>
 
         <!-- navber start -->
-        <nav class="navbar navbar-expand-lg bg-light py-3">
+        <nav class="navbar navbar-expand-lg py-3">
             <div class="container">
-              <a class="navbar-brand order-1 order-sm-0 order-md-0 order-lg-0" href="#"><img src="image/logo.webp" alt=""></a>
+              <a class="navbar-brand" href="#"><img src="image/logo.webp" alt="" class="img-fluid"></a>
 
-                  <button class="navbar-toggler order-3 order-sm-3 order-md-3 order-lg-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
 
@@ -54,7 +54,7 @@
                 </ul>
               </div>
 
-              <div class="register-btn order-2">
+              <div class="register-btn order-2 d-none d-sm-none d-md-none d-lg-block">
                 <button class="btn btn-outline-info order-sm-2 order-md-2 order-lg-2 border-info py-2 px-5 fw-semibold ms-5" type="submit" style="margin-left: 120px !important;">Register</button>
               </div>
 
