--- a/index.html
+++ b/index.html
@@ -279,11 +279,11 @@
 
         <section class="explore pt-5">
           <div class="container p-0">
-              <div class="row py-3">
+              <div class="row">
                 <!--  -->
                 <div class="col-lg-6 col-12 col-md-6 p-0">
-                  <div class="explore-leftimg p-0">
-                    <img src="image/working.png" class="img-fluid w-100 p-0 rounded-start" alt="">
+                  <div class="explore-leftimg">
+                    <img src="image/working.png" class="img-fluid rounded-start" alt="">
                   </div>
                 </div>
                 <!--  -->
